Booting into RISC-V
Implemented a rudimentary boot process
for the OS. In theory, we should be linking and building
executable, jumping into our kernel, initialising
our stack and hart and just looping. I have no stdio
at the moment to test this and I need to implement
rudimentary tests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,7 @@ authors = ["Nashe Mncube <mncubenashe@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-# riscv = "0.6.0"
+riscv = "0.6"
+rustsbi = "0.1"
+
 
