--- a/.cargo/config
+++ b/.cargo/config
@@ -1,20 +1,22 @@
 [build]
 target = "riscv64gc-unknown-none-elf"
-rustflags = ['-Clink-arg=-Tsrc/lds/linker.ld']
+rustflags = ['-Cpanic=abort', '-Clink-arg=-Tsrc/lds/linker.ld']
 
 [target.riscv64gc-unknown-none-elf]
 runner = '''qemu-system-riscv64
 -machine virt
 -cpu rv64
 -smp 4
--m 256M
+-m 128M
 -serial mon:stdio
+-d guest_errors,unimp
+-drive if=none,format=raw,file=hdd.dsk,id=foo
 -bios none
 -device virtio-rng-device
 -device virtio-gpu-device
 -device virtio-net-device
 -device virtio-tablet-device
 -device virtio-keyboard-device
--s -S -kernel '''
+-kernel '''
 
 # TODO: test build options
