--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["Nashe Mncube <mncubenashe@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-riscv = "0.6"
-rustsbi = "0.1"
-
-
+spin = "0.5.2"
+volatile = "0.2.6"
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
