--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 spin = "0.5.2"
 volatile = "0.2.6"
+qemu-exit = "^1"
 [dependencies.lazy_static]
 version = "1.0"
 features = ["spin_no_std"]
