--- a/.cargo/config
+++ b/.cargo/config
@@ -3,18 +3,23 @@ target = "riscv64gc-unknown-none-elf"
 rustflags = ['-Cpanic=abort', '-Clink-arg=-Tsrc/lds/linker.ld']
 
 [target.riscv64gc-unknown-none-elf]
-runner = '''qemu-system-riscv64
--machine virt
--cpu rv64
--smp 4
--m 128M
--serial mon:stdio
--d guest_errors,unimp
--drive if=none,format=raw,file=hdd.dsk,id=foo
--bios none
--device virtio-rng-device
--device virtio-gpu-device
--device virtio-net-device
--device virtio-tablet-device
--device virtio-keyboard-device
--kernel '''
+ runner = '''qemu-system-riscv64
+ -machine virt
+ -cpu rv64
+ -smp 4
+ -m 128M
+ -serial mon:stdio
+ -d guest_errors,unimp
+ -drive if=none,format=raw,file=hdd.dsk,id=foo
+ -bios none
+ -device virtio-rng-device
+ -device virtio-gpu-device
+ -device virtio-net-device
+ -device virtio-tablet-device
+ -device virtio-keyboard-device
+ -nographic
+ -kernel '''
+
+[unstable]
+build-std = ["core", "compiler_builtins"]
+build-std-features = ["compiler-builtins-mem"]
