--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ test=false
 [dependencies]
 spin = "0.5.2"
 volatile = "0.2.6"
-qemu-exit = "^1"
+qemu-exit = "2"
+
 [dependencies.lazy_static]
 version = "1.0"
 features = ["spin_no_std"]
